--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Chempo González <chempo.glez@gmail.com> (https://github.com/chempogonzalez/)",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "TIMING=1 eslint .",
     "test": "pnpm -r run test",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
