--- a/packages/full-setup/package.json
+++ b/packages/full-setup/package.json
@@ -1,12 +1,18 @@
 {
   "name": "eslint-config-ts-standard-next",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Chempo's ESLint Config for NextJS with TypeScript projects with best practices",
   "author": "Chempo González <chempo.glez@gmail.com> (https://github.com/chempogonzalez/)",
   "license": "MIT",
   "homepage": "https://github.com/chempo/eslint-config-ts-standard-next",
   "keywords": [
-    "eslint-config"
+    "eslint-config",
+    "typescript",
+    "nextjs",
+    "next",
+    "react",
+    "jsx",
+    "best practices"
   ],
   "main": "index.js",
   "files": [
