--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "TIMING=1 eslint .",
     "test": "pnpm -r run test",
-    "release": "bumpp package.json packages/*/package.json --commit=\"release: \" --push --tag && pnpm -r publish --access public"
+    "release": "bumpp package.json packages/*/package.json --commit=\"release: v\" --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
     "@types/eslint": "^8.4.9",
