--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "release": "bumpp package.json packages/*/package.json --commit=\"release: v\" --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@types/eslint": "^8.4.9",
-    "@types/node": "^18.11.9",
-    "bumpp": "^8.2.1",
-    "eslint": "^8.26.0",
-    "eslint-config-ts-standard-next": "*",
-    "next": "13.0.2",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^18.17.17",
+    "bumpp": "^9.2.0",
+    "eslint": "^8.49.0",
+    "eslint-config-ts-standard-next": "workspace:*",
+    "next": "13.5.1",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   }
 }
