--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -16,24 +16,25 @@
     "lint": "eslint . --config=index.js"
   },
   "peerDependencies": {
-    "eslint": ">=7.4.0"
+    "eslint": ">=8.0.1"
   },
   "dependencies": {
-    "eslint-config-standard": "17.0.0",
+    "@stylistic/eslint-plugin-js": "^0.0.4",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-import-newlines": "1.2.3",
-    "eslint-plugin-jsonc": "2.5.0",
-    "eslint-plugin-markdown": "3.0.0",
-    "eslint-plugin-n": "15.4.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-import-newlines": "1.3.4",
+    "eslint-plugin-jsonc": "2.9.0",
+    "eslint-plugin-markdown": "3.0.1",
+    "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-unicorn": "44.0.2",
-    "eslint-plugin-yml": "1.2.0",
-    "jsonc-eslint-parser": "2.1.0",
-    "yaml-eslint-parser": "1.1.0"
+    "eslint-plugin-unicorn": "48.0.1",
+    "eslint-plugin-yml": "1.9.0",
+    "jsonc-eslint-parser": "2.3.0",
+    "yaml-eslint-parser": "1.2.2"
   },
   "devDependencies": {
-    "eslint": "8.26.0"
+    "eslint": "8.49.0"
   }
 }
